Minor changes to build on GraalVM native-image.