@@ -15,11 +15,20 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
-                    <compilerArgument>--enable-preview</compilerArgument>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>graalvm</groupId>
+            <artifactId>svm</artifactId>
+            <version>22.2</version>
+            <scope>system</scope>
+            <systemPath>${JAVA_HOME}/lib/svm/builder/svm.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
